# practica2_CAP

./: README.md
Practica_2/: Scene1.txt
Practica_2/RayTracingCPU/: CMakeLists.txt  Camera.hpp  CollisionData.hpp  Crystalline.cpp  Crystalline.hpp  Diffuse.hpp  MPI_Puro.sh  Main.cpp  Material.hpp  Metallic.cpp  Metallic.hpp  Object.hpp  Random.cpp  Random.hpp  Ray.hpp  Scene.cpp  Scene.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Utils.cpp  Utils.hpp  Vec3.cpp  Vec3.hpp
Practica_2/mains/: MainCodigoBase.cpp
Practica_2/mains/MPI/: MainMPI_Columnas.cpp  MainMPI_Filas.cpp  MainMPI_Fotogramas.cpp  MainMPI_Tiles.cpp
Practica_2/mains/MPI + OpenMP/: MainMPI_MP_Columnas.cpp  MainMPI_MP_Filas.cpp
Practica_2/mains/OpenMP/: MainOpenMP_Columnas.cpp  MainOpenMP_Filas.cpp  MainOpenMP_Fotogramas.cpp  MainOpenMP_Tiles.cpp
